Fix stacking order for Taxonomy navigation
Make the toggle button for the taxonomy tree
appear behind the primary navigation in collapsed
state.

--- a/src/containers/TaxonView/Taxonomy/Taxonomy.scss
+++ b/src/containers/TaxonView/Taxonomy/Taxonomy.scss
@@ -6,7 +6,6 @@
 
   .taxonomy-toggle {
     position: relative;
-    z-index: 120000;
     display: block;
     margin: 0;
     padding: 0;
@@ -26,6 +25,7 @@
       left: 1rem;
       bottom: 1rem;
       padding: .25rem;
+      z-index: 90000;
       background: $black;
       border-radius: 50%;
 
@@ -62,6 +62,7 @@
       position: fixed;
       top: 0;
       left: 0;
+      z-index: 120000;
       background: $white;
       border-bottom: .0625rem solid #ccc;
 
